<resources>
    <string name="app_name">홈그라운드</string>
    <string name="app_name_en">HOMEGROUND</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">회원가입</string>
    <string name="user_info_modify">회원정보수정</string>
    <string name="save">적립</string>
    <string name="use">사용</string>
    <string name="cancel">취소</string>
    <string name="point_save">포인트 적립</string>
    <string name="point_use">포인트 사용</string>
    <string name="search">조회</string>
    <string name="user_search">사용자 조회</string>
    <string name="settings">설정</string>
    <string name="name">이름</string>
    <string name="phone_num">핸드폰 번호</string>
    <string name="birthday">생년월일</string>
    <string name="note">비고</string>
    <string name="do_join">가입하기</string>
    <string name="do_modify">수정하기</string>
    <string name="confirm">확인</string>
    <string name="sign_up_finish">회원가입이 완료되었습니다.</string>
    <string name="modify_finish">회원정보수정이 완료되었습니다.</string>
    <string name="sign_up_fail">회원가입을 실패하였습니다.</string>
    <string name="modify_fail">회원가입을 실패하였습니다.</string>
    <string name="user_empty">회원이 존재하지 않습니다.</string>
    <string name="user_default">휴대폰 번호 뒷자리\n4자리를 입력해주세요.</string>
    <string name="percent">적립률(%)</string>
    <string name="device_name">기기 이름</string>
    <string name="change">변경하기</string>
    <string name="change_finish">변경이 완료되었습니다.</string>
    <string name="_cancel">을 취소하시겠습니까?</string>

    <string name="key_00">00</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_c">c</string>

</resources>
