<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2,3">

        <TableRow
            style="@style/TableRowStyle">
            <com.homeground.app.common.ui.textview.ScaleTextView
                android:id="@+id/key_1"
                style="@style/KeyPadStyle"
                android:text="@string/key_1"/>
            <com.homeground.app.common.ui.textview.ScaleTextView
                android:id="@+id/key_2"
                style="@style/KeyPadStyle"
                android:text="@string/key_2"/>
            <com.homeground.app.common.ui.textview.ScaleTextView
                android:id="@+id/key_3"
                style="@style/KeyPadStyle"
                android:text="@string/key_3"/>
        </TableRow>

        <TableRow
            style="@style/TableRowStyle">
            <com.homeground.app.common.ui.textview.ScaleTextView
                android:id="@+id/key_4"
                style="@style/KeyPadStyle"
                android:text="@string/key_4"/>
            <com.homeground.app.common.ui.textview.ScaleTextView
                android:id="@+id/key_5"
                style="@style/KeyPadStyle"
                android:text="@string/key_5"/>
            <com.homeground.app.common.ui.textview.ScaleTextView
                android:id="@+id/key_6"
                style="@style/KeyPadStyle"
                android:text="@string/key_6"/>
        </TableRow>


        <TableRow
            style="@style/TableRowStyle">
            <com.homeground.app.common.ui.textview.ScaleTextView
                android:id="@+id/key_7"
                style="@style/KeyPadStyle"
                android:text="@string/key_7"/>
            <com.homeground.app.common.ui.textview.ScaleTextView
                android:id="@+id/key_8"
                style="@style/KeyPadStyle"
                android:text="@string/key_8"/>
            <com.homeground.app.common.ui.textview.ScaleTextView
                android:id="@+id/key_9"
                style="@style/KeyPadStyle"
                android:text="@string/key_9"/>
        </TableRow>

        <TableRow
            style="@style/TableRowStyle"
            android:gravity="center">
            <FrameLayout
                android:id="@+id/key_del"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.homeground.app.common.ui.imageview.ScaleImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/outline_arrow_back_black_36"/>

            </FrameLayout>

            <com.homeground.app.common.ui.textview.ScaleTextView
                android:id="@+id/key_0"
                style="@style/KeyPadStyle"
                android:text="@string/key_0"/>

            <com.homeground.app.common.ui.textview.ScaleTextView
                android:id="@+id/key_clear"
                style="@style/KeyPadStyle"
                android:text="@string/key_c" />

        </TableRow>

    </TableLayout>

</LinearLayout>