<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.auth.signup.UserInfoFragment"
        android:orientation="vertical"
        android:background="@color/white">

        <include layout="@layout/layout_common_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextInputEditTextStyle"
                        android:hint="@string/name" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextInputEditTextStyle"
                        android:inputType="phone"
                        android:maxLength="13"
                        android:hint="@string/phone_num" />

                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthday_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextInputEditTextStyle"
                        android:enabled="false"
                        android:maxLength="20"
                        android:hint="@string/birthday" />

                </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:id="@+id/birthday_layout"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                </FrameLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>