<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Bottom View Start-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.homeground.app.common.ui.textview.ScaleTextView
            android:id="@+id/user_list_point_save_text"
            android:layout_width="@dimen/user_list_bottom_view_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:background="@color/colorAccent"
            android:text="@string/save"/>

        <com.homeground.app.common.ui.textview.ScaleTextView
            android:id="@+id/user_list_point_use_text"
            android:layout_width="@dimen/user_list_bottom_view_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:background="@color/colorPrimary"
            android:text="@string/use"/>

        <com.homeground.app.common.ui.textview.ScaleTextView
            android:id="@+id/user_list_point_history_text"
            android:layout_width="@dimen/user_list_bottom_view_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:background="@color/design_default_color_primary"
            android:text="@string/search"/>

    </LinearLayout>

    <!-- Bottom View End-->

    <!-- Surface View Start -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_bg_selector"
        android:padding="@dimen/common_padding_start">

        <LinearLayout
            android:id="@+id/user_list_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_list_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_20" />

                <TextView
                    android:id="@+id/user_list_birthday_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_padding_start"
                    android:text="-"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_15" />

            </LinearLayout>


            <TextView
                android:id="@+id/user_list_phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding"
                android:layout_marginBottom="@dimen/common_padding"
                android:text="-"
                android:textColor="@color/grey"
                android:textSize="@dimen/text_size_15" />

        </LinearLayout>

        <TextView
            android:id="@+id/user_list_point_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/user_list_layout"
            android:gravity="end"
            android:text="-"
            android:textColor="@color/point"
            android:textSize="@dimen/text_size_20" />

    </RelativeLayout>
    <!-- Surface View End -->
</com.daimajia.swipe.SwipeLayout>